--- a/thai/index.html
+++ b/thai/index.html
@@ -163,9 +163,7 @@
 
 <section id="h_shaping">
 <h2>Glyph shaping &amp; positioning</h2>
-
-<p>None of the Thai characters require special shaping based on the visual context. Nor is printed text cursive.</p>
-<p>The orthography has no case distinction, and no special transforms are needed to convert between characters.</p>
+<p>The orthography has no case distinction, and no special transforms are needed to convert between characters. Nor is printed text cursive.</p>
 
 
 
@@ -193,19 +191,33 @@
 
 <section id="context">
 <h3>Context-based shaping &amp; positioning</h3>
-<p>Most of the combining characters in Thai are used for vowel signs and tone marks.</p>
-<p>Combining characters need to be placed in different positions, according to the context. The  example below shows the same tone character displayed at different heights, according to what falls beneath it.</p>
+
+<p>Thai has no stacking or conjunct behaviour, but the following are a few  selected  examples of contextual shaping and positioning.</p>
+
+<p>Most of the combining characters in Thai are used for vowel signs and tone marks. Combining characters need to be placed in different positions, according to the visual context. The example below shows the same tone character displayed at different heights, according to what falls beneath it.</p>
+
 
 <figure id="fig_thai_position">
-<p class="large"><img src="index-data/thai_position.png" class="ex" alt="ให้มีขึ้น" data-notes="62px Noto Serif Thai"></p>
+<p class="large"><img src="index-data/thai_position.png" class="ex" lang="th" alt="ให้มีขึ้น" data-notes="62px Noto Serif Thai"></p>
 <figcaption>The same tone mark displayed at different heights.</figcaption>
 </figure>
 
+
 <p>Thai regularly combines multiple combining characters above a base consonant. There are two examples in the text below, both of which show a base character with a vowel sign and then a tone mark on top.</p>
 
+
 <figure id="fig_multiple_diacritics">
-<p class="large"><img src="index-data/multiple_diacritics.png" class="ex" alt="ครั้งที่" data-notes="62px Noto Serif Thai"></p>
+<p class="large"><img src="index-data/multiple_diacritics.png" class="ex" lang="th" alt="ครั้งที่" data-notes="62px Noto Serif Thai"></p>
 <figcaption>Multiple diacritics (vowel sign + tone mark) attached to the same base character.</figcaption>
+</figure>
+
+
+<p>Although Thai has very little in the way of shaping, <a class="figref">fig_shaping</a> shows a number of small glyph adaptations that occur in some fonts (here, Noto Serif Thai) when certain tall or deep consonant letters have vowel marks attached. The  2 examples on the left show a slight reduction in the downward extent of the consonant glyph; in the middle 2 examples the part of the consonant glyph that lies below the baseline is removed altogether and replaced by the vowel sign; and in the right-most example, the height of the consonant glyph is reduced when a vowel sign appears above it.</p>
+
+
+<figure id="fig_shaping">
+<p class="large"><img src="index-data/fig_shaping.png" class="ex" lang="th" alt="ฎฎุ ฏฏุ ญญุ ฐฐุ ฬฬึ" data-notes="Noto Serif Thai 32px 144dpi"></p>
+<figcaption>Shaping changes in the Noto Serif Thai font. Each example shows an unadorned consonant glyph on the left, and on the right a shaped version when a vowel sign is attached.</figcaption>
 </figure>
 </section>
 
