--- a/thai/index.html
+++ b/thai/index.html
@@ -212,7 +212,7 @@
 </figure>
 
 
-<p>Although Thai has very little in the way of shaping, <a class="figref">fig_shaping</a> shows a number of small glyph adaptations that occur in some fonts (here, Noto Serif Thai) when certain tall or deep consonant letters have vowel marks attached. The  2 examples on the left show a slight reduction in the downward extent of the consonant glyph; in the middle 2 examples the part of the consonant glyph that lies below the baseline is removed altogether and replaced by the vowel sign; and in the right-most example, the height of the consonant glyph is reduced when a vowel sign appears above it.</p>
+<p>Although Thai has very little in the way of shaping, [[[#fig_shaping]]] shows a number of small glyph adaptations that occur in some fonts (here, Noto Serif Thai) when certain tall or deep consonant letters have vowel marks attached. The  2 examples on the left show a slight reduction in the downward extent of the consonant glyph; in the middle 2 examples the part of the consonant glyph that lies below the baseline is removed altogether and replaced by the vowel sign; and in the right-most example, the height of the consonant glyph is reduced when a vowel sign appears above it.</p>
 
 
 <figure id="fig_shaping">
