--- a/thai/index.html
+++ b/thai/index.html
@@ -420,7 +420,7 @@
 
 <p>To counteract these deficiencies, authors may use <span class="codepoint" translate="no"><span class="uname">U+200B ZERO WIDTH SPACE</span></span> and <span class="codepoint" translate="no"><span class="uname">U+2060 WORD JOINER</span></span>  (see [[[#h_zwsp]]]).</p>
 
-<p>Note that most browsers have heuristics for segmenting Thai text, but there is no guarantee that these rules will work equally well for <a href="index.html#languages">other languages that are written in the Thai script</a>.</p>
+<p>Note that most browsers have heuristics for segmenting Thai text, but there is no guarantee that these rules will work equally well for <a href="https://r12a.github.io/scripts/thai/index.html#languages">other languages that are written in the Thai script</a>.</p>
 <section id="linedge">
 <h4>Line-edge rules</h4>
 
