thai: Add SARA AM to list of dependent vowels in Graphemes

--- a/thai/index.html
+++ b/thai/index.html
@@ -262,7 +262,7 @@
 <p>Combining marks may include zero or more of the following types of character, grouped by labels that correspond to Unicode Indic syllabic category values.</p>
 
 <ol>
-<li><a href="https://r12a.github.io/scripts/apps/listindic/index.html?chars=ิีึืุู็ั">Dependent vowels</a> [8] (see <a class="secref" href="https://r12a.github.io/scripts/thai/th.html#combiningvowels">Combining marks used for vowels</a>) There is usually only one vowel combining mark per base consonant. Thai has many composite vowels that are made of combinations of ordinary letter  characters and  combining marks clustered around a base. (The letter characters are manually positioned in the text stream.)</li>
+<li><a href="https://r12a.github.io/scripts/apps/listindic/index.html?chars=ิีึืุู็ัำ">Dependent vowels</a> [9] (see <a class="secref" href="https://r12a.github.io/scripts/thai/th.html#combiningvowels">Combining marks used for vowels</a>) There is usually only one vowel combining mark per base consonant. Thai has many composite vowels that are made of combinations of ordinary letter  characters and  combining marks clustered around a base. (The letter characters are manually positioned in the text stream.)</li>
 
 <li><a href="https://r12a.github.io/scripts/apps/listindic/index.html?chars=่้๊๋">Tone marks</a> [4] (see <a class="secref" href="https://r12a.github.io/scripts/thai/th.html#tones">Tones</a>) Tone marks should be typed and stored immediately after a dependent vowel, if there is one, and immediately after the base otherwise.</li>
 
