thai: Further clarifications prompted by https://github.com/w3c/sealreq/issues/55

--- a/thai/index.html
+++ b/thai/index.html
@@ -262,7 +262,7 @@
 <p>Combining marks may include zero or more of the following types of character, grouped by labels that correspond to Unicode Indic syllabic category values.</p>
 
 <ol>
-<li><a href="https://r12a.github.io/scripts/apps/listindic/index.html?chars=ิีึืุู็ัำ">Dependent vowels</a> [9] (see <a class="secref" href="https://r12a.github.io/scripts/thai/th.html#combiningvowels">Combining marks used for vowels</a>) There is usually only one vowel combining mark per base consonant. Thai has many composite vowels that are made of combinations of ordinary letter  characters and  combining marks clustered around a base. (The letter characters are manually positioned in the text stream.)</li>
+<li><a href="https://r12a.github.io/scripts/apps/listindic/index.html?chars=ิีึืุู็ัำ">Dependent vowels</a> [9] (see <a class="secref" href="https://r12a.github.io/scripts/thai/th.html#combiningvowels">Combining marks used for vowels</a>)  Thai has many composite vowels that are made of combinations of ordinary letter  characters and  combining marks clustered around a base, but in the modern Thai language only one of these dependent vowels is used per base. (Other languages may use more than one. The letter characters are ordinary spacing characters, that are manually positioned in the text stream.)</li>
 
 <li><a href="https://r12a.github.io/scripts/apps/listindic/index.html?chars=่้๊๋">Tone marks</a> [4] (see <a class="secref" href="https://r12a.github.io/scripts/thai/th.html#tones">Tones</a>) Tone marks should be typed and stored immediately after a dependent vowel, if there is one, and immediately after the base otherwise.</li>
 
@@ -505,7 +505,7 @@ is always preceded by space, however it should not wrap to the next line on its 
 
 <p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition.</p>
 
-<p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing.</p>
+<p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters in this font is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing. (In other fonts, the basic height of the Thai letters tends to between the Latin x-height and cap-height, and the overall height of the Thai line is therefore greater. See for example the Angsana New font sample below.)</p>
 
 <figure id="fig_baselines">
 <div>
