thai: In Baselines swap Thonburi font for FreesiaUPC, and clarify that basic height in Noto is low.

--- a/thai/index.html
+++ b/thai/index.html
@@ -505,28 +505,28 @@ is always preceded by space, however it should not wrap to the next line on its 
 
 <p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition.</p>
 
-<p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters in this font is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing. (In other fonts, the basic height of the Thai letters tends to between the Latin x-height and cap-height, and the overall height of the Thai line is therefore greater. See for example the Angsana New font sample below.)</p>
+<p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters in this font is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing. In other fonts, the basic height of the Thai letters tends to between the Latin x-height and cap-height, and the overall height of the Thai line is therefore greater. See for example the Angsana New font sample below.</p>
 
 <figure id="fig_baselines">
 <div>
-<img src="index-data/fig_baselines_noto_serif.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Noto Serif Thai 130px" style="max-width: 90%; margin-block-end:1rem;" lang="km">
+<img src="index-data/fig_baselines_noto_serif.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Noto Serif Thai 130px" style="max-width: 90%; margin-block-end:1rem;" lang="th">
 
-<img src="index-data/fig_baselines_noto_sans.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Noto Sans Thai 130px" style="max-width: 90%;" lang="km">
+<img src="index-data/fig_baselines_noto_sans.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Noto Sans Thai 130px" style="max-width: 90%;" lang="th">
 </div>
 <figcaption>Font metrics for Latin text  compared with Thai glyphs in the Noto Serif Thai (top) and Noto Sans Thai (bottom) fonts.</figcaption>
 </figure>
 
 
-<p>[[[#fig_baselines_other]]] shows similar comparisons for the Thonburi and Angsana New fonts.</p>
+<p>[[[#fig_baselines_other]]] shows similar comparisons for the FreesiaUPC and Angsana New fonts.</p>
 
 
 <figure id="fig_baselines_other">
 <div>
-<img src="index-data/fig_baselines_thonburi.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Thonburi 130px" style="max-width: 90%; margin-block-end:2rem;" lang="km">
+<img src="index-data/fig_baselines_freesiaupc.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="FreesiaUPC 130px" style="max-width: 90%; margin-block-end:2rem;" lang="th">
 
-<img src="index-data/fig_baselines_angsana.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Angsana New 130px" style="max-width: 90%;" lang="km">
+<img src="index-data/fig_baselines_angsana.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Angsana New 130px" style="max-width: 90%;" lang="th">
 </div>
-<figcaption>Latin font metrics compared with Thai glyphs in the Thonburi (top) and Angasana New (bottom) fonts.</figcaption>
+<figcaption>Latin font metrics compared with Thai glyphs in the FreesiaUPC (top) and Angasana New (bottom) fonts.</figcaption>
 </figure>
 
 
