thai: Replace various images with svg

--- a/thai/index.html
+++ b/thai/index.html
@@ -197,8 +197,8 @@
 <p>Most of the combining characters in Thai are used for vowel signs and tone marks. Combining characters need to be placed in different positions, according to the visual context. The example below shows the same tone character displayed at different heights, according to what falls beneath it.</p>
 
 
-<figure id="fig_thai_position">
-<p class="large"><img src="index-data/thai_position.png" class="ex" lang="th" alt="ให้มีขึ้น" data-notes="62px Noto Serif Thai"></p>
+<figure id="fig_thai_position" class="sideCaption">
+<img src="index-data/thai_position.svg" class="ex" alt="ให้มีขึ้น" data-notes="62px Noto Serif Thai" style="height:5rem;">
 <figcaption>The same tone mark displayed at different heights.</figcaption>
 </figure>
 
@@ -206,8 +206,8 @@
 <p>Thai regularly combines multiple combining characters above a base consonant. There are two examples in the text below, both of which show a base character with a vowel sign and then a tone mark on top.</p>
 
 
-<figure id="fig_multiple_diacritics">
-<p class="large"><img src="index-data/multiple_diacritics.png" class="ex" lang="th" alt="ครั้งที่" data-notes="62px Noto Serif Thai"></p>
+<figure id="fig_multiple_diacritics" class="sideCaption">
+<img src="index-data/fig_multiple_diacritics.svg" class="ex" alt="ครั้งที่" data-notes="62px Noto Serif Thai" style="height:5rem;">
 <figcaption>Multiple diacritics (vowel sign + tone mark) attached to the same base character.</figcaption>
 </figure>
 
@@ -215,10 +215,15 @@
 <p>Although Thai has very little in the way of shaping, [[[#fig_shaping]]] shows a number of small glyph adaptations that occur in some fonts (here, Noto Serif Thai) when certain tall or deep consonant letters have vowel marks attached. The  2 examples on the left show a slight reduction in the downward extent of the consonant glyph; in the middle 2 examples the part of the consonant glyph that lies below the baseline is removed altogether and replaced by the vowel sign; and in the right-most example, the height of the consonant glyph is reduced when a vowel sign appears above it.</p>
 
 
-<figure id="fig_shaping">
-<p class="large"><img src="index-data/fig_shaping.png" class="ex" lang="th" alt="ฎฎุ ฏฏุ ญญุ ฐฐุ ฬฬึ" data-notes="Noto Serif Thai 32px 144dpi"></p>
+<figure id="fig_shaping" class="sideCaption">
+<div style="display: flex; flex-wrap: wrap;">
+<img src="index-data/fig_shaping3.svg" class="ex" lang="th" alt="ฎฎุ ฏฏุ ญญุ ฐฐุ ฬฬึ" data-notes="Noto Serif Thai 32px 144dpi" style="height:6rem; margin-inline: 1rem;">
+<img src="index-data/fig_shaping2.svg" class="ex" lang="th" alt="ฎฎุ ฏฏุ ญญุ ฐฐุ ฬฬึ" data-notes="Noto Serif Thai 32px 144dpi" style="height:6rem; margin-inline: 1rem;">
+<img src="index-data/fig_shaping1.svg" class="ex" lang="th" alt="ฎฎุ ฏฏุ ญญุ ฐฐุ ฬฬึ" data-notes="Noto Serif Thai 32px 144dpi" style="height:6rem; margin-inline: 1rem;"> 
+</div>
 <figcaption>Shaping changes in the Noto Serif Thai font. Each example shows an unadorned consonant glyph on the left, and on the right a shaped version when a vowel sign is attached.</figcaption>
 </figure>
+
 </section>
 
 
@@ -273,15 +278,17 @@
 
 <p>The following examples show a variety of grapheme clusters:</p>
 
+
 <table class="noBorderTable alignStartTable" style="margin-inline-start: 10%;">
-<tbody><tr><td><img src="index-data/g_smell.png" alt=""></td><td><span class="charExample" translate="no"><span class="ex" lang="th">ได้กลิ่น</span> <bdi class="trans">dây.klìn</bdi> <bdi class="meaning">to smell</bdi></span></td></tr>
+<tr><td><img src="index-data/g_smell.svg" alt="" style="height:4rem;"></td><td><span class="charExample" translate="no"><span class="ex" lang="th">ได้กลิ่น</span> <bdi class="trans">dây.klìn</bdi> <bdi class="meaning">to smell</bdi></span></td></tr>
 
-<tr><td><img src="index-data/g_toilet.png" alt=""></td><td><span class="charExample" translate="no"><span class="ex" lang="th">ห้องน้ำ</span> <bdi class="ipa">hɔ̂ŋ.náːm</bdi> <bdi class="meaning">toilet</bdi></span></td></tr>
+<tr><td><img src="index-data/g_toilet.svg" alt="" style="height:4rem;"></td><td><span class="charExample" translate="no"><span class="ex" lang="th">ห้องน้ำ</span> <bdi class="ipa">hɔ̂ŋ.náːm</bdi> <bdi class="meaning">toilet</bdi></span></td></tr>
 
-<tr><td><img src="index-data/g_program.png" alt=""></td><td><span class="charExample" translate="no"><span class="ex" lang="th">โปรแกรม</span> <bdi class="ipa">prōː.krɛ̄m</bdi> <bdi class="meaning">(computer) program</bdi></span></td></tr>
+<tr><td><img src="index-data/g_program.svg" alt="" style="height:3.5rem;"></td><td><span class="charExample" translate="no"><span class="ex" lang="th">โปรแกรม</span> <bdi class="ipa">prōː.krɛ̄m</bdi> <bdi class="meaning">(computer) program</bdi></span></td></tr>
 
-<tr><td><img src="index-data/g_sacred.png" alt=""></td><td><span class="charExample" translate="no"><span class="ex" lang="th">ศักดิ์สิทธิ์</span> <bdi class="ipa">sàk̚.sìt̚</bdi> <bdi class="meaning">to be sacred</bdi></span></td></tr>
-</tbody></table>
+<tr><td><img src="index-data/g_sacred.svg" alt="" style="height:4rem;"></td><td><span class="charExample" translate="no"><span class="ex" lang="th">ศักดิ์สิทธิ์</span> <bdi class="ipa">sàk̚.sìt̚</bdi> <bdi class="meaning">to be sacred</bdi></span></td></tr>
+</table>
+
 
 <p>The grapheme cluster boundaries are convenient for justification algorithms, which  insert equal amounts of space between non-combining letters, including between non-combining vowel sign components and their consonants (see <a class="secref" href="#justification">Text alignment &amp; justification</a>).</p>
 
@@ -471,10 +478,12 @@ is always preceded by space, however it should not wrap to the next line on its 
 
 <p>This kind of spacing requires a special behaviour for <span class="codepoint" translate="no"><span lang="th">&#x0E33;</span> [<span class="uname">U+0E33 THAI CHARACTER SARA AM</span>]</span>. The small circle is kept with the preceding consonant, and space is added before the spacing part of the vowel, as shown in [[[#fig_am_spacing]]].</p>
 
+
 <figure id="fig_am_spacing">
-<img src="index-data/am_spacing.png" class="ex" alt="น้ำ นํ้า" data-notes="62px Noto Serif Thai">
+<img src="index-data/am_spacing.svg" class="ex" alt="น้ำ นํ้า" data-notes="62px Noto Serif Thai" style="height: 6rem;">
 <figcaption>Sara AM before (left) and after (right) inter-character spacing has been applied.</figcaption>
 </figure>
+
 
 <p>(To facilitate this, applications tend to convert <span class="codepoint" translate="no"><span lang="th">&#x0E33;</span> [<span class="uname">U+0E33 THAI CHARACTER SARA AM</span>]</span> to the sequence <span class="codepoint" translate="no"><span lang="th">&#x0E4D;&#x0E32;</span> [<span class="uname">U+0E4D THAI CHARACTER NIKHAHIT</span> + <span class="uname">U+0E32 THAI CHARACTER SARA AA</span>]</span> before stretching. Some care has to also be taken to correctly order the superscript glyphs, since in memory the tone mark precedes the nikhahit. The <span class="name">nikhahit</span> character is not otherwise used for modern Thai.)</p>
 </section>
