--- a/thai/index.html
+++ b/thai/index.html
@@ -514,7 +514,7 @@ is always preceded by space, however it should not wrap to the next line on its 
 
 <p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition.</p>
 
-<p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters in this font is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing. In other fonts, the basic height of the Thai letters tends to between the Latin x-height and cap-height, and the overall height of the Thai line is therefore greater. See for example the Angsana New font sample below.</p>
+<p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters in this font is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing. In other fonts, the basic height of the Thai letters tends to be between the Latin x-height and cap-height, and the overall height of the Thai line is therefore greater. See for example the Angsana New font sample below.</p>
 
 <figure id="fig_baselines">
 <div>
