--- a/thai/index.html
+++ b/thai/index.html
@@ -363,7 +363,27 @@
 <span class="charExample" translate="no"><span class="ex" lang="th">กรี</span> <bdi class="ipa">kà.rīː / krīː</bdi> <bdi class="meaning">elephant / pointy bit on shrimp head</bdi></span>
 </p>
 </section>
+</section>
 
+
+
+
+
+<section id="space_widths">
+<h4>Space widths</h4>
+
+<p>It is possible to find two different sizes of space in Thai: large spaces between sentences, and small spaces in other places (eg. for separating sub clauses). The width of the small space is the same as <span class="codepoint" translate="no"><bdi lang="th">&#x0E01;</bdi> [<a href="../../scripts/thai/block.html#char0E01"><span class="uname">U+0E01 THAI CHARACTER KO KAI</span></a>]</span>, and the larger space is double that size.</p>
+
+<p>Most people no longer make this distinction, but some may want to. It also occurs in other Southeast Asian scripts.</p>
+
+
+<figure id="fig_wide_spacing" class="sideCaption">
+<img src="index-data/fig_wide_spacing.png" alt="" data-source="https://th.wikipedia.org/wiki/%E0%B8%A0%E0%B8%B2%E0%B8%A9%E0%B8%B2%E0%B9%84%E0%B8%97%E0%B8%A2" style="width:30rem;">
+<figcaption>An example of how multiple width spacing may look.</figcaption>
+</figure>
+
+<p class="observation"><span class="leadin">Observation:</span> It is currently not clear how to achieve this on the Web, where multiple space characters are collapsed to a single space by default.  One suggestion is to use <span class="codepoint" translate="no"><bdi lang="th">&#x2003;</bdi> [<a href="../../scripts/thai/block.html#char2003"><span class="uname">U+2003 EM SPACE</span></a>]</span>, but that is not well supported by Thai fonts, and doesn't expand during justification. See <a href="GitHub,https://github.com/w3c/sealreq/issues/46">GitHub</a> for a discussion.</p>
+<p>&nbsp;</p>
 </section>
 
 
